# clinvar-hearingloss-ml

./: README.md  environment.yml  pyproject.toml  requirements.txt
docs/: code_inventory.md  methods.md  project_summary.md  results_summary.md
notebooks/: README.md
scripts/: 00_download_prepare_clinvar.py  01_diagnose_random_vs_gene_split.py  01_initial_random_forest_baseline.py  02_evaluate_conservation.py  03_heterogeneity_analysis.py  04_shap_explainability.py
src/hlpath/: __init__.py  data.py  heterogeneity.py  metrics.py  modeling.py  shap_analysis.py
