[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hearingloss-variants"
version = "0.1.0"
description = "Hearing loss variant pathogenicity prediction with gene-based validation and SHAP explainability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "xgboost==2.0.3",
  "matplotlib>=3.8",
  "shap==0.48.0",
  "numba>=0.59",
  "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]
